Added an album title header for the album screen - visible only when you scroll past the big album header at the top of the screen

--- a/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
@@ -13,4 +13,16 @@
         android:verticalSpacing="1dp"
         android:gravity="center"/>
 
+    <TextView
+        android:id="@+id/albumTitleHeader"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="2dp"
+        android:paddingLeft="5dp"
+        android:paddingBottom="2dp"
+        android:textAppearance="@style/AlbumTitleHeader"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:background="?albumTitleHeaderBackgroundColor"/>
+
 </RelativeLayout>
