--- a/NotABadPlayer/app/src/main/res/values/styles.xml
+++ b/NotABadPlayer/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="quickPlayerSubtextColor">@color/quickPlayerSubtext</item>
         <item name="quickPlayerButtonsTintColor">@color/quickPlayerButtonsTint</item>
         <item name="quickPlayerBorderColor">@color/quickPlayerBorder</item>
+        <item name="albumTitleHeaderTextColor">@color/albumTitleHeaderText</item>
         <item name="trackNumberColor">@color/trackNumber</item>
         <item name="genericButtonTextColor">@color/genericButtonText</item>
         <item name="settingsButtonTextColor">@color/settingsButtonText</item>
@@ -23,6 +24,7 @@
         <item name="playerBackgroundColor">@color/playerBackground</item>
         <item name="genericButtonBackgroundColor">@color/genericButtonBackground</item>
         <item name="genericBorderBackgroundColor">@color/genericBorderBackground</item>
+        <item name="albumTitleHeaderBackgroundColor">@color/albumTitleHeaderBackground</item>
         <item name="borderOutlineColor">@color/borderOutline</item>
     </style>
     <style name="Dark" parent="Theme.AppCompat.NoActionBar">
@@ -39,6 +41,7 @@
         <item name="quickPlayerSubtextColor">@color/quickPlayerSubtextInverted</item>
         <item name="quickPlayerButtonsTintColor">@color/playerButtonsTint</item>
         <item name="quickPlayerBorderColor">@color/quickPlayerBorderInverted</item>
+        <item name="albumTitleHeaderTextColor">@color/albumTitleHeaderTextInverted</item>
         <item name="trackNumberColor">@color/trackNumberInverted</item>
         <item name="genericButtonTextColor">@color/genericButtonTextInverted</item>
         <item name="settingsButtonTextColor">@color/settingsButtonTextInverted</item>
@@ -48,6 +51,7 @@
         <item name="playerBackgroundColor">@color/playerBackgroundInverted</item>
         <item name="genericButtonBackgroundColor">@color/genericButtonBackgroundInverted</item>
         <item name="genericBorderBackgroundColor">@color/genericBorderBackgroundInverted</item>
+        <item name="albumTitleHeaderBackgroundColor">@color/albumTitleHeaderBackgroundInverted</item>
         <item name="borderOutlineColor">@color/borderOutlineInverted</item>
     </style>
     <style name="Mix" parent="Theme.AppCompat.NoActionBar">
@@ -64,6 +68,7 @@
         <item name="quickPlayerSubtextColor">@color/quickPlayerSubtext</item>
         <item name="quickPlayerButtonsTintColor">@color/quickPlayerButtonsTint</item>
         <item name="quickPlayerBorderColor">@color/quickPlayerBorder</item>
+        <item name="albumTitleHeaderTextColor">@color/albumTitleHeaderText</item>
         <item name="trackNumberColor">@color/trackNumber</item>
         <item name="genericButtonTextColor">@color/genericButtonText</item>
         <item name="settingsButtonTextColor">@color/settingsButtonText</item>
@@ -73,6 +78,7 @@
         <item name="playerBackgroundColor">@color/playerBackground</item>
         <item name="genericButtonBackgroundColor">@color/genericButtonBackground</item>
         <item name="genericBorderBackgroundColor">@color/genericBorderBackground</item>
+        <item name="albumTitleHeaderBackgroundColor">@color/albumTitleHeaderBackground</item>
         <item name="borderOutlineColor">@color/borderOutline</item>
     </style>
 
@@ -156,6 +162,10 @@
         <item name="android:textColor">?quickPlayerSubtextColor</item>
         <item name="android:textSize">10sp</item>
         <item name="android:typeface">monospace</item>
+    </style>
+    <style name="AlbumTitleHeader" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textColor">?albumTitleHeaderTextColor</item>
+        <item name="android:textSize">20sp</item>
     </style>
     <style name="GenericButtonText" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">?genericButtonTextColor</item>
