Album title header is now limited to 2 lines

--- a/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
@@ -22,6 +22,8 @@
         android:paddingBottom="2dp"
         android:textAppearance="@style/AlbumTitleHeader"
         android:textAlignment="center"
+        android:minLines="1"
+        android:maxLines="2"
         android:visibility="gone"
         android:background="?albumTitleHeaderBackgroundColor"/>
 
