--- a/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
@@ -85,30 +85,43 @@
                 <Button
                     android:id="@+id/mediaButtonPlaylist"
                     android:layout_width="48dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.2"
                     android:background="@drawable/playlist"
                     app:backgroundTint="?quickPlayerButtonsTintColor"/>
                 <Button
                     android:id="@+id/mediaButtonBack"
                     android:layout_width="64dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.2"
                     android:background="@drawable/media_previous"
                     app:backgroundTint="?quickPlayerButtonsTintColor"/>
                 <Button
                     android:id="@+id/mediaButtonPlay"
                     android:layout_width="64dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.2"
                     android:background="@drawable/media_play"
                     app:backgroundTint="?quickPlayerButtonsTintColor"/>
                 <Button
                     android:id="@+id/mediaButtonForward"
                     android:layout_width="64dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.2"
                     android:background="@drawable/media_next"
                     app:backgroundTint="?quickPlayerButtonsTintColor"/>
-                <Space
-                    android:layout_width="48dp"
-                    android:layout_height="0dp" />
+                <FrameLayout
+                    android:layout_width="64dp"
+                    android:layout_height="40dp"
+                    android:layout_weight="0.2">
+                    <Button
+                        android:id="@+id/mediaButtonPlayOrder"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/media_sort_forwards_repeat"
+                        app:backgroundTint="?quickPlayerButtonsTintColor"/>
+                </FrameLayout>
             </LinearLayout>
         </LinearLayout>
         
