Fixed double tap bugs that would open multiple activities and mess up the ui state; code cleanup

--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -60,7 +60,8 @@
                 android:layout_height="200dp"
                 android:layout_gravity="center"
                 android:progressDrawable="@drawable/volumebar_seek_bar"
-                android:thumb="@drawable/volumebar_seek_thumb"/>
+                android:thumb="@drawable/volumebar_seek_thumb"
+                android:background="@null"/>
             <ImageView
                 android:id="@+id/volumeBarRightIcon"
                 android:layout_width="24dp"
