Fixed quick player swipe up and improved player swipe down

--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.media.notabadplayer.View.Player.PlayerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:clickable="true"
-    android:focusable="true"
     android:background="@drawable/background_player">
     
     <LinearLayout
@@ -244,4 +242,4 @@
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+</com.media.notabadplayer.View.Player.PlayerLayout>
