Polished quick player UI; added feature to pause player when an external player starts playing

--- a/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
@@ -12,8 +12,6 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingTop="1dp"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp"
         android:gravity="bottom"
         android:orientation="vertical">
 
@@ -40,8 +38,6 @@
                     android:id="@+id/labelTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:maxWidth="200dp"
                     android:text="@string/nothing_playing"
                     android:textAppearance="@style/QuickPlayerText"
                     android:singleLine="true"/>
@@ -81,6 +77,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
                 android:orientation="horizontal"
                 android:gravity="center_horizontal">
                 <Button
@@ -117,7 +115,7 @@
                     android:layout_weight="0.2">
                     <Button
                         android:id="@+id/mediaButtonPlayOrder"
-                        android:layout_width="32dp"
+                        android:layout_width="40dp"
                         android:layout_height="32dp"
                         android:layout_gravity="center"
                         android:background="@drawable/media_order_forwards_repeat"
