--- a/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
@@ -12,7 +12,6 @@
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
         android:numColumns="2"
-        android:horizontalSpacing="2dp"
         android:gravity="center"/>
     
     <FrameLayout
@@ -21,10 +20,24 @@
         android:layout_alignParentRight="true">
         
         <com.media.notabadplayer.View.Albums.GridSideIndexingView
-            android:id="@+id/sideIndexing"
+            android:id="@+id/tableSideIndexingView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         
     </FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/indexingTextCharacter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/ListItemText"
+            android:textStyle="bold"
+            android:textSize="80sp"
+            android:alpha="0"/>
+    </LinearLayout>
     
 </RelativeLayout >
