--- a/NotABadPlayer/app/src/main/res/values/colors.xml
+++ b/NotABadPlayer/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="borderOutline">#414141</color>
     <color name="quickPlayerBorder">#00FFFFFF</color>
     <color name="albumTitleHeaderBackground">#414141</color>
+    <color name="indexerCharBackground">#99414141</color>
     
     <color name="baseBackgroundInverted">#414141</color>
     <color name="navigationBackgroundInverted">#ffffff</color>
@@ -28,6 +29,7 @@
     <color name="borderOutlineInverted">#414141</color>
     <color name="quickPlayerBorderInverted">#FFFFFFFF</color>
     <color name="albumTitleHeaderBackgroundInverted">#F8F7F5</color>
+    <color name="indexerCharBackgroundInverted">#99F8F7F5</color>
     
     <!-- Text -->
     <color name="blackText">#414141</color>
@@ -44,6 +46,7 @@
     <color name="quickPlayerText">#ffffff</color>
     <color name="quickPlayerSubtext">#ffffff</color>
     <color name="albumTitleHeaderText">#ffffff</color>
+    <color name="indexerCharText">#FFC107</color>
     <color name="trackNumber">#6c6c6c</color>
     <color name="genericButtonText">#ffffff</color>
     <color name="settingsButtonText">#2676d9</color>
