--- a/NotABadPlayer/app/src/main/res/values/styles.xml
+++ b/NotABadPlayer/app/src/main/res/values/styles.xml
@@ -15,6 +15,7 @@
         <item name="quickPlayerButtonsTintColor">@color/quickPlayerButtonsTint</item>
         <item name="quickPlayerBorderColor">@color/quickPlayerBorder</item>
         <item name="albumTitleHeaderTextColor">@color/albumTitleHeaderText</item>
+        <item name="indexerCharBackgroundColor">@color/indexerCharBackground</item>
         <item name="trackNumberColor">@color/trackNumber</item>
         <item name="genericButtonTextColor">@color/genericButtonText</item>
         <item name="settingsButtonTextColor">@color/settingsButtonText</item>
@@ -42,6 +43,7 @@
         <item name="quickPlayerButtonsTintColor">@color/playerButtonsTint</item>
         <item name="quickPlayerBorderColor">@color/quickPlayerBorderInverted</item>
         <item name="albumTitleHeaderTextColor">@color/albumTitleHeaderTextInverted</item>
+        <item name="indexerCharBackgroundColor">@color/indexerCharBackgroundInverted</item>
         <item name="trackNumberColor">@color/trackNumberInverted</item>
         <item name="genericButtonTextColor">@color/genericButtonTextInverted</item>
         <item name="settingsButtonTextColor">@color/settingsButtonTextInverted</item>
@@ -69,6 +71,7 @@
         <item name="quickPlayerButtonsTintColor">@color/quickPlayerButtonsTint</item>
         <item name="quickPlayerBorderColor">@color/quickPlayerBorder</item>
         <item name="albumTitleHeaderTextColor">@color/albumTitleHeaderText</item>
+        <item name="indexerCharBackgroundColor">@color/indexerCharBackground</item>
         <item name="trackNumberColor">@color/trackNumber</item>
         <item name="genericButtonTextColor">@color/genericButtonText</item>
         <item name="settingsButtonTextColor">@color/settingsButtonText</item>
