--- a/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
@@ -17,6 +17,7 @@
     <FrameLayout
         android:layout_width="30dp"
         android:layout_height="match_parent"
+        android:layout_marginRight="2dp"
         android:layout_alignParentRight="true">
         
         <com.media.notabadplayer.View.Albums.GridSideIndexingView
