--- a/NotABadPlayer/app/src/main/res/values/styles.xml
+++ b/NotABadPlayer/app/src/main/res/values/styles.xml
@@ -19,6 +19,7 @@
         <item name="trackNumberColor">@color/trackNumber</item>
         <item name="genericButtonTextColor">@color/genericButtonText</item>
         <item name="settingsButtonTextColor">@color/settingsButtonText</item>
+        <item name="gridSideIndexingTextColor">@color/gridSideIndexingText</item>
         <item name="baseBackgroundColor">@color/baseBackground</item>
         <item name="navigationBackgroundColor">@color/navigationBackground</item>
         <item name="quickPlayerBackgroundColor">@color/quickPlayerBackground</item>
@@ -47,6 +48,7 @@
         <item name="trackNumberColor">@color/trackNumberInverted</item>
         <item name="genericButtonTextColor">@color/genericButtonTextInverted</item>
         <item name="settingsButtonTextColor">@color/settingsButtonTextInverted</item>
+        <item name="gridSideIndexingTextColor">@color/gridSideIndexingTextInverted</item>
         <item name="baseBackgroundColor">@color/baseBackgroundInverted</item>
         <item name="navigationBackgroundColor">@color/navigationBackgroundInverted</item>
         <item name="quickPlayerBackgroundColor">@color/quickPlayerBackgroundInverted</item>
@@ -75,6 +77,7 @@
         <item name="trackNumberColor">@color/trackNumber</item>
         <item name="genericButtonTextColor">@color/genericButtonText</item>
         <item name="settingsButtonTextColor">@color/settingsButtonText</item>
+        <item name="gridSideIndexingTextColor">@color/gridSideIndexingText</item>
         <item name="baseBackgroundColor">@color/baseBackground</item>
         <item name="navigationBackgroundColor">@color/navigationBackground</item>
         <item name="quickPlayerBackgroundColor">@color/quickPlayerBackground</item>
