Fixed storage version migration - previously the migration from older versions was not being evaluated properly; added an option to pick if the player screen should pop up when playing a track from a list

--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_appearance.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_appearance.xml
@@ -83,4 +83,26 @@
             android:background="@drawable/settings_item_border"/>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_open_player_on_play"
+            android:textAppearance="@style/PrimaryText"
+            android:singleLine="true"/>
+        <Space
+            android:layout_width="1dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <Spinner
+            android:id="@+id/openPlayerOnPlayPicker"
+            android:layout_width="128dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/settings_item_border"/>
+    </LinearLayout>
+
 </LinearLayout>
